[gd_scene load_steps=4 format=3 uid="uid://dbt6pqst36dlq"]

[ext_resource type="Script" uid="uid://b0p1ygkdpwl7j" path="res://scenes/Combate/QUIZ/questionario_quiz.gd" id="1_6atvc"]
[ext_resource type="AudioStream" uid="uid://b6rvnix5valq2" path="res://Audios/Menu/Quiz.mp3" id="2_5ix11"]
[ext_resource type="Script" uid="uid://eao0n0bq6xcr" path="res://scenes/Menu Scenes/Botoes.gd" id="2_xfn6o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6atvc")

[node name="Pergunta" type="Label" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 9.0
offset_right = 682.0
offset_bottom = 48.0

[node name="LblMateria" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 502.0
offset_right = 594.0
offset_bottom = 525.0

[node name="LblStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 545.0
offset_top = 68.0
offset_right = 585.0
offset_bottom = 91.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="BotaoA" type="Button" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_xfn6o")

[node name="BotaoB" type="Button" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_xfn6o")

[node name="BotaoC" type="Button" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_xfn6o")

[node name="BotaoD" type="Button" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_xfn6o")

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 54.0
text = "Voltar"
script = ExtResource("2_xfn6o")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5ix11")
autoplay = true

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
